--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 :root {
   font-size: 62.5%;
   font-synthesis: none;
@@ -14,4 +16,50 @@
 
 body {
   min-height: 100vh;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
+  & > * {
+    font-size: 20px;
+  }
+}
+
+#nearest-role {
+  font-size: 80px;
+  font-weight: bold;
+}
+
+#main-values__section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
+  background-color: red;
+  padding: 20px;
+}
+
+.nearest-role__section {
+  & > * {
+    background-color: white;
+  }
+}
+
+.main-title {
+  font-size: 100px;
+}
+
+.nearest-role__section {
+}
+.other_roles__section {
+}
+.other-roles {
+}
+.other-roles {
 }
